Refactor controllers to improve error handling, response consistency, and implement mock responses for `CartController`.